# DepGraph

./: README.md
.github/workflows/: publish.yml
depgraph-py/: README.md  depgraph.html  pyproject.toml
depgraph-py/depgraph/: __init__.py  analyzer.py  cli.py  crawler.py  graph.py  parser.py  visualizer.py
depgraph-py/tests/: test_depgraph.py  test_file.py
